# flight

./: .eslintrc.js  .gitattributes  .gitignore  .gitpod.yml  .prettierrc  README.md  SECURITY.md  cargo.toml  cli-js.js  cli-rs.js  cli.js  cli.ts  flight.rb  go.mod  go.sum  index.js  install.iss  install.ps1  install.sh  main.go  main.js  package-lock.json  package.json  pnpm-lock.yaml  pubKey.pgp  requirements.txt  sonar-project.properties
.devcontainer/: devcontainer.json
.flight/: dotenv-16.0.0.tgz  react.tgz  superagent-7.1.2.tgz
.github/actions/: compile.yml
.github/workflows/: CI.yml  CODEOWNERS  build-linux.yml  build-mac.yml  build-win.yml  compile.yml  go.yml  scan.yml
docs/: docusaurus.config.js
funcs/: funcs.go
lib/: logging.js  util.js
scripts/: .hooks-default.sh  append.sh  bin.js  mark-executable.sh  update-icon.js
settings/: settings.go
src/: constants.js  lib.js
src/cmds/: create.js  version.js
src/install/: install.go
src/js/: lib.js  libv2.js  wrapper-js.js
src/js/fetcher/: fetchers.js  index.js  package.json  packageURLMiddleware.js  parseImports.js
src/js/publisher/: publish.sh
src/js/resolver/: index.js  index.ts  package.json  resolver.js  resolver.ts
src/js/resolver/registries/: npm-http.js  (+1 more)
src/luau/: lib.js
src/py/: lib.js
src/py/fetcher/: fetch.js
src/rs/: lib.js
src/rs/resolver/: resolve.js
src/shared/: cacheService.js  checks.js  extendedfs.js  logger.js
src/shared/parser/: Cargo.toml  index.node  package.json
src/shared/parser/src/: constants.rs  init.rs  lib.rs
src/uninstall/: uninstall.go
(+1 files in other folders)
