[package]
name = "parser"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = "1.0.138"
serde_derive = "1.0.138"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
